labels for contact and mobile adjusts

--- a/public/assets/sass/main.css
+++ b/public/assets/sass/main.css
@@ -161,6 +161,12 @@ body {
   .shopping {
     padding: 2%;
   }
+  .row{
+    padding:5%;
+  }
+  body{
+    overflow-y: hidden;
+  }
 }
 
 /* END MOBILE SETTINGS */
