--- a/public/assets/sass/main.css
+++ b/public/assets/sass/main.css
@@ -482,7 +482,7 @@ body {
   float: left;
   margin: 0;
   padding: 0;
-  width: 500px;
+  width:50vw;
   height: 300px;
   background: #ccc;
   text-align: center;
