--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -45,6 +45,14 @@ body{
         padding:2%;
     }
 
+    body{
+        overflow-y: hidden;
+    }
+
+    .row{
+        padding:5%;
+    }
+
 }
 
 /* END MOBILE SETTINGS */
@@ -372,7 +380,7 @@ body{
     float: left;
     margin: 0;
     padding: 0;
-    width: 500px;
+    width: 50vw;
     height: 300px;
     background: #ccc;
     text-align: center;
