--- a/public/assets/sass/_navbar.scss
+++ b/public/assets/sass/_navbar.scss
@@ -36,6 +36,10 @@
 
 .bottombar{
     background-color:white !important;
+    -webkit-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.15);
+    -moz-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.15);
+    box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.15);
+    margin-bottom:40px;
 }
 
 .menu-item{
