--- a/public/assets/sass/main.css
+++ b/public/assets/sass/main.css
@@ -59,6 +59,9 @@
 
 .bottombar {
   background-color: white !important;
+  -webkit-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
+  margin-bottom: 40px;
 }
 
 .menu-item {
