--- a/public/assets/sass/_navbar.scss
+++ b/public/assets/sass/_navbar.scss
@@ -1,5 +1,11 @@
 /* TOP BAR */
 
+.fixed-navbar{
+    width:100%;
+    position: fixed;
+    top:0px;
+}
+
 .topbar{
     box-shadow: 0 6px 20px rgba(0,0,0,.16) !important;
     background-color: #f6f6f6 !important;
