--- a/public/assets/sass/_painel.scss
+++ b/public/assets/sass/_painel.scss
@@ -4,10 +4,14 @@ body {
 
 /* SIDEBAR */
 
+.has-sidebar{
+    margin-left:15%;
+}
+
 .sidebar{
     padding-top:6%;
     position:fixed;
-    width:20%;
+    width:15%;
     height:100%;
     background-color:#444;
 }
@@ -31,6 +35,14 @@ body {
     color:white;
     border-bottom:1px solid #666;
     margin:0px;
+}
+
+.items ul a:hover{
+    text-decoration:none;
+}
+
+.items ul li:hover{
+    background-color:#999;
 }
 
 /* END SIDEBAR */
