--- a/public/assets/sass/_painel.scss
+++ b/public/assets/sass/_painel.scss
@@ -4,8 +4,20 @@ body {
 
 /* SIDEBAR */
 
+@media only screen and (max-width:800px){
+    .sidebar{
+        display:none;
+    }
+}
+
+@media only screen and (min-width:801px){
+    .has-sidebar{
+        margin-left:15%;
+    }
+}
+
 .has-sidebar{
-    margin-left:15%;
+    height: 100%;
 }
 
 .sidebar{
