--- a/public/assets/sass/main.css
+++ b/public/assets/sass/main.css
@@ -600,4 +600,35 @@ a.control_next {
 }
 
 /* END SLIDER */
+/* BLOG */
+.data {
+  padding-left: 10px;
+  text-align: left !important;
+  font-size: 12px;
+  color: #666;
+}
+
+.botao-ver-mais {
+  width: 100%;
+  background-color: #A16B5E;
+  color: white;
+  text-align: center;
+  border-radius: 25px;
+}
+
+.botao-ver-mais:hover {
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  background-color: #F1D7D2;
+  color: white;
+}
+
+.botao-ver-mais a {
+  text-decoration: none !important;
+  display: block;
+  padding: 10px;
+  color: white;
+}
+
+/* END BLOG */
 /*# sourceMappingURL=main.css.map */
