--- a/public/assets/sass/main.css
+++ b/public/assets/sass/main.css
@@ -220,7 +220,7 @@ body {
   color: green;
 }
 
-.blog-edit {
+.blog-edit, .blog-delete {
   text-align: center;
 }
 
@@ -229,6 +229,17 @@ body {
 }
 
 /* END BLOG */
+/* PROCEDIMENTOS */
+.procedimento-edit, .procedimento-delete {
+  text-align: center;
+}
+
+.delete-button a {
+  font-size: 24px;
+  color: red;
+}
+
+/* END PROCEDIMENTOS */
 /* END IMPORTS */
 /* SETTINGS */
 .grid {
